# AI-Triage-Snow-IncidentAnalyzer

./: .dockerignore  .gitignore  AGENTS.md  LICENSE  README.md  buildspec-containers.yml  buildspec-full-deploy-only.yml  buildspec-full-source.yml  buildspec-splunk-only.yml  buildspec.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: api-contract.md  architecture.md  configuration.md  security-exceptions.md  state-machine.asl.json
docs/runbooks/: deployment.md  operations.md  servicenow-webhook-session.md
docs/runbooks/snippets/: incident-insert-webhook-business-rule.js
infrastructure/: app.py  cdk.context.json  cdk.json  requirements.txt
infrastructure/stacks/: __init__.py  compute_stack.py  data_stack.py  delivery_stack.py  network_stack.py  observability_stack.py  security_stack.py
scripts/: deploy_local.py
services/attachment-agent/: Dockerfile
services/context-agent/: Dockerfile  requirements.txt
services/incident-ingest/: Dockerfile  requirements.txt
services/incident-ingest/src/: authorizer_handler.py  dispatcher_handler.py  lambda_handler.py
services/rag-indexer/: Dockerfile
services/rag-retriever/: Dockerfile
services/reasoning-agent/: Dockerfile
services/servicenow-writer/: Dockerfile
services/splunk-agent/: Dockerfile
shared/: requirements.txt
tests/integration/: test_mock_e2e.py
tests/unit/: test_authorizer.py  test_payload_validation.py  test_rag_router.py  test_reasoning_grounded.py  test_servicenow_writer.py  test_splunk_guardrails.py  test_splunk_query_builder.py  test_work_note.py
(+27 files in other folders)
